@@ -53,6 +53,7 @@ $strAlterOrderBy = 'Sortera om tabellen efter';
 $strAnalyze = 'Analysera';
 $strAnalyzeTable = 'Analysera tabell';
 $strAnd = 'Och';
+$strAndSmall = 'och';
 $strAndThen = 'och sedan';
 $strAngularLinks = 'Vinklade länkar';
 $strAnIndex = 'Ett index har lagts till för %s';
@@ -162,6 +163,7 @@ $strCompleteInserts = 'Kompletta infogningar';
 $strCompression = 'Komprimering';
 $strCompressionWillBeDetected = 'Importerad fils komprimering kommer automatiskt detekteras från: %s';
 $strConfigDefaultFileError = 'Kunde inte ladda standardkonfiguration från: "%1$s"';
+$strConfigDirectoryWarning = 'Katalogen [code]config[/code], som används av installationsskriptet, finns fortfarande i din phpMyAdmin-katalog. Du borde ta bort den när phpMyAdmin har konfigurerats.';
 $strConfigFileError = 'phpMyAdmin kunde inte läsa din konfigurationsfil!<br />Detta kan inträffa om PHP hittar ett fel i den eller om PHP inte hittar filen.<br />Anropa konfigurationsfilen direkt mha länken nedan och läs PHP:s felmeddelande(n) som du erhåller. I de flesta fall saknas ett citationstecken eller ett semikolon någonstans.<br />Om du erhåller en tom sida är allt bra.';
 $strConfigureTableCoord = 'Var god ange koordinaterna för tabellen %s';
 $strConnectionError = 'Kan ej skapa förbindelse: ogiltiga inställningar.';
@@ -189,6 +191,7 @@ $strCreateTable  = 'Skapa tabell';
 $strCreateUserDatabase = 'Databas för användare';
 $strCreateUserDatabaseName = 'Skapa databas med samma namn och ge alla privilegier';
 $strCreateUserDatabaseNone = 'Ingen';
+$strCreateUserDatabasePrivileges = 'Bevilja alla privilegier för databas &quot;%s&quot;';
 $strCreateUserDatabaseWildcard = 'Ge alla privilegier till namn med jokertecken (username\_%)';
 $strCreationDates = 'Skapad/Uppdaterad/Kontrollerad datum';
 $strCriteria = 'Villkor';
@@ -251,6 +254,7 @@ $strDisplayPDF = 'Visa PDF-schema';
 $strDoAQuery = 'Utför en "Query By Example" (jokertecken: "%")';
 $strDocSQL = 'DocSQL';
 $strDocu = 'Dokumentation';
+$strDoNotAutoIncrementZeroValues = 'Använd inte AUTO_INCREMENT för nollvärden';
 $strDownloadFile = 'Ladda ner fil';
 $strDoYouReally = 'Vill du verkligen ';
 $strDropDatabaseStrongWarning = 'Du håller på att FÖRGÖRA en hel databas!';
@@ -284,6 +288,7 @@ $strErrorRelationAdded = 'Fel: Relation inte tillagd.';
 $strErrorRelationExists = 'Fel: Relation finns redan.';
 $strErrorRenamingTable = 'Fel vid namnbyte på tabell %1$s till %2$s';
 $strErrorSaveTable = 'Fel vid sparande av koordinater för Designer.';
+$strEscapeCRLF = 'Ta bort CRLF-tecken i fält';
 $strEscapeWildcards = 'Jokertecknen _ och % måste föregås av ett \ för att användas i egentlig betydelse';
 $strEsperanto = 'Esperanto';
 $strEstonian = 'Estnisk';
@@ -337,6 +342,7 @@ $strGeneratePassword = 'Generera lösenord';
 $strGenTime = 'Skapad';
 $strGeorgian = 'Georgisk';
 $strGerman = 'Tysk';
+$strGetMoreThemes = 'Hämta fler teman!';
 $strGlobal = 'global';
 $strGlobalPrivileges = 'Globala privilegier';
 $strGlobalValue = 'Globalt värde';
@@ -357,6 +363,7 @@ $strHideShowNoRelation = 'Dölj/visa tabeller utan relationer';
 $strHome = 'Hem';
 $strHomepageOfficial = 'phpMyAdmin:s officiella hemsida';
 $strHostEmpty = 'Värdnamnet är tomt!';
+$strHostTableExplanation = 'När värdtabellen används ignoreras detta fält och värden lagrade i värdtabllen används istället.';
 $strHost = 'Värd';
 $strHTMLExcel = 'Microsoft Excel 2000';
 $strHTMLWord = 'Microsoft Word 2000';
@@ -452,6 +459,7 @@ $strLocalhost = 'Lokal';
 $strLocationTextfile = 'Textfilens plats';
 $strLoginInformation = 'Inloggningsinformation';
 $strLogin = 'Logga in';
+$strLoginWithoutPassword = 'Inloggning utan lösenord är inte tillåtet enligt konfiguration (se AllowNoPassword)';
 $strLogout = 'Logga ut';
 $strLogPassword = 'Lösenord:';
 $strLogServerHelp = 'Du kan ange värdnamn/IP-adress och port separerade med mellanslag.';
@@ -517,6 +525,7 @@ $strNoFrames = 'phpMyAdmin fungerar tyvärr endast med webbläsare som hanterar 
 $strNoIndex = 'Inga index är definierade!';
 $strNoIndexPartsDefined = 'Inga delar av index är definierade!';
 $strNoModification = 'Ingen förändring';
+$strNoneDefault = 'Inga';
 $strNone = 'Inget';
 $strNo = 'Nej';
 $strNoOptions = 'Detta format har inga alternativ';
@@ -709,6 +718,10 @@ $strRepairTable = 'Reparera tabell';
 $strReplaceNULLBy = 'Ersätt NULL med';
 $strReplaceTable = 'Ersätt data i tabell';
 $strReplication = 'Replikering';
+$strReplicationStatusInfo = 'Denna MySQL-server arbetar som %s i <b>replikerings</b>-läge. För mer information om replikeringsstatus på servern, gå till <a href="#replication">replikeringssektionen</a>.';
+$strReplicationStatus_master = 'Master-status';
+$strReplicationStatus = 'Replikeringsstatus';
+$strReplicationStatus_slave = 'Slave-status';
 $strReset = 'Återställ';
 $strResourceLimits = 'Resursbegränsningar';
 $strRestartInsertion = 'Börja om infogning med %s rader';
@@ -775,6 +788,7 @@ $strServerTabVariables = 'Variabler';
 $strServerTrafficNotes = '<b>Servertrafik</b>: Dessa tabeller visar statistik för nätverkstrafiken hos denna MySQL-server sedan den startade.';
 $strServerVars = 'Servervariabler och inställningar';
 $strServerVersion = 'Serverversion';
+$strSessionGCWarning = 'Din PHP-parameter [a@http://php.net/manual/en/session.configuration.php#ini.session.gc-maxlifetime@]session.gc_maxlifetime[/a] är lägre än cookie-giltighet konfigurerad i phpMyAdmin. På grund av detta kommer din inloggning upphöra att gälla tidigare än konfigurerat i phpMyAdmin.';
 $strSessionStartupErrorGeneral = 'Kan inte starta session utan fel. Kontrollera felmeddelanden i din PHP:s och/eller webbservers loggfil och konfigurera din PHP-installation korrekt.';
 $strSessionValue = 'Sessionsvärde';
 $strSetEnumVal = 'Om en fälttyp är "enum" eller "set", ange värden enligt följande format: \'a\',\'b\',\'c\'...<br />Om du behöver lägga till ett bakåtstreck ("\") eller ett enkelcitat ("\'") i värdena, skriv ett bakåtstreck före tecknet (t.ex. \'\\\\xyz\' eller \'a\\\'b\').';
@@ -1000,11 +1014,13 @@ $strSetupSaveDir_desc = 'Katalog på servern där exporter kan sparas';
 $strSetupSaveDir_name = 'Spara-katalog';
 $strSetupServerAuthConfigMsg = 'Du valde [kbd]config[/kbd]-autentisering och inkluderade användarnamn och lösenord för autoinloggning, vilket inte är en önskvärd inställning för skarpa värdar. Vem som helst som vet eller gissar din phpMyAdmin-URL kan direkt komma åt ditt phpMyAdmin-verktyg. Sätt [a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server]autentiseringstyp[/a] till [kbd]cookie[/kbd] eller [kbd]http[/kbd].';
 $strSetupServerExtensionMsg = 'Du bör använda mysqli av prestandaanledningar';
+$strSetupServerNoPasswordMsg = 'Du tillåter anslutning till servern utan lösenord.';
 $strSetupServersAdd = 'Lägg till en ny server';
 $strSetupServers_AllowDeny_order_desc = 'Lämna tomt om inte används';
 $strSetupServers_AllowDeny_order_name = 'Ordning för värdautentisering';
 $strSetupServers_AllowDeny_rules_desc = 'Lämna tomt för standard';
 $strSetupServers_AllowDeny_rules_name = 'Regler för värdautentisering';
+$strSetupServers_AllowNoPassword_name = 'Tillåt inloggning utan lösenord';
 $strSetupServers_AllowRoot_name = 'Tillåt root-inloggning';
 $strSetupServers_auth_swekey_config_desc = 'Sökväg till konfigurationsfilen för [a@http://swekey.com]SweKey hårdvaruautentisering[/a] (inte placerad i din dokumentrotkatalog; förslag: /etc/swekey.conf)';
 $strSetupServers_auth_swekey_config_name = 'SweKey konfigurationsfil';
@@ -1035,6 +1051,7 @@ $strSetupServers_hide_db_desc = 'Dölj databaser som matchar reguljärt uttryck 
 $strSetupServers_hide_db_name = 'Dölj databaser';
 $strSetupServers_history_desc = 'Lämna tomt för inget stöd för SQL-frågehistorik, standard: [kbd]pma_history[/kbd]';
 $strSetupServers_history_name = 'Tabell för SQL-frågehistorik';
+$strSetupServers_host_desc = 'Värdnamn där MySQL-servern körs';
 $strSetupServers_host_name = 'Serverns värdnamn';
 $strSetupServers_LogoutURL_name = 'Utloggning URL';
 $strSetupServers_nopassword_desc = 'Försök ansluta utan lösenord';
@@ -1069,6 +1086,7 @@ $strSetupServers_user_desc = 'Lämna tomt om inte autentisering config används'
 $strSetupServers_user_name = 'Användare för autentisering config';
 $strSetupServers_verbose_check_desc = 'Inaktivera ifall du vet att dina tabeller pma_* är aktuella. Detta förhindrar kompabilitetskontroller och ökar därmed prestanda';
 $strSetupServers_verbose_check_name = 'Utförlig kontroll';
+$strSetupServers_verbose_desc = 'En användarvänlig beskrivning av denna server. Lämna tomt för att visa värdnamnet istället.';
 $strSetupServers_verbose_name = 'Beskrivande namn för denna server';
 $strSetupSetValue = 'Ange värde: %s';
 $strSetupShowAll_desc = 'Ifall en användare ska få se en knapp &quot;visa alla (rader)&quot;';
@@ -1125,6 +1143,8 @@ $strSetupZipDumpExportWarning = '[a@?page=form&amp;formset=features#tab_Import_e
 $strSetupZipDumpImportWarning = '[a@?page=form&amp;formset=features#tab_Import_export]Zip dekomprimering[/a] erfordrar funktioner (%s) som inte är tillgängliga på detta system.';
 $strSetupZipDump_name = 'ZIP';
 $strShowAll = 'Visa alla';
+$strShowBinaryContents = 'Visa binärt innehåll';
+$strShowBLOBContents = 'Visa BLOB-innehåll';
 $strShowColor = 'Visa färger';
 $strShowDatadictAs = 'Format för datalexikon';
 $strShowFullQueries = 'Visa fullständiga frågor';
@@ -1279,6 +1299,7 @@ $strStandInStructureForView = 'Ersättningsstruktur för visning';
 $strStatCheckTime = 'Senaste kontroll';
 $strStatCreateTime = 'Skapades';
 $strStatement = 'Uppgift';
+$strStatic = 'statisk';
 $strStatisticsOverrun = 'På en upptagen server kan byte-räknare spåra ur, varför denna statistik som rapporterats från MySQL-servern kan vara felaktig.';
 $strStatUpdateTime = 'Senaste uppdatering';
 $strStatus = 'Status';
@@ -1437,25 +1458,4 @@ $strYes = 'Ja';
 $strZeroRemovesTheLimit = 'Anm: Genom att sätta dessa alternativ till 0 (noll) tas begränsningarna bort.';
 $strZip = '"zippad"';
 
-$strSessionGCWarning = 'Your PHP parameter [a@http://php.net/manual/en/session.configuration.php#ini.session.gc-maxlifetime@]session.gc_maxlifetime[/a] is lower that cookie validity configured in phpMyAdmin, because of this, your login will expire sooner than configured in phpMyAdmin.';  //to translate
-$strSetupServers_host_desc = 'Hostname where MySQL server is running';  //to translate
-$strSetupServers_verbose_desc = 'A user-friendly description of this server. Leave blank to display the hostname instead.';  //to translate
-$strCreateUserDatabasePrivileges = 'Grant all privileges on database &quot;%s&quot;';  //to translate
-$strShowBinaryContents = 'Show binary contents';  //to translate
-$strShowBLOBContents = 'Show BLOB contents';  //to translate
-$strStatic = 'static';  //to translate
-$strLoginWithoutPassword = 'Login without a password is forbidden by configuration (see AllowNoPassword)';  //to translate
-$strSetupServerNoPasswordMsg = 'You allow for connecting to the server without a password.';  //to translate
-$strSetupServers_AllowNoPassword_name = 'Allow logins without a password';  //to translate
-$strHostTableExplanation = 'When Host table is used, this field is ignored and values stored in Host table are used instead.';  //to translate
-$strGetMoreThemes = 'Get more themes!';  //to translate
-$strNoneDefault = 'None';  //to translate
-$strConfigDirectoryWarning = 'Directory [code]config[/code], which is used by the setup script, still exists in your phpMyAdmin directory. You should remove it once phpMyAdmin has been configured.';  //to translate
-$strEscapeCRLF = 'Remove CRLF characters within fields';  //to translate
-$strDoNotAutoIncrementZeroValues = 'Do not use AUTO_INCREMENT for zero values';  //to translate
-$strAndSmall = 'and';  //to translate
-$strReplicationStatus = 'Replication status';  //to translate
-$strReplicationStatusInfo = 'This MySQL server works as %s in <b>replication</b> process. For further information about replication status on the server, please visit the <a href="#replication">replication section</a>.';  //to translate
-$strReplicationStatus_master = 'Master status';  //to translate
-$strReplicationStatus_slave = 'Slave status';  //to translate
 ?>
