@@ -65,6 +65,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2787162 [interface] Table with name 'log_views' is incorrectly displayed as a view
 + patch #2665440 Detect mcrypt initialization failure
 + [lang] Galician update, thanks to Xosé Calvo - xosecalvo
++ [lang] Swedish update, thanks to Björn T. Hallberg
 
 3.1.6.0 (not yet released)
 - bug #2785912 [doc] no ON UPDATE CURRENT_TIMESTAMP in list of attributes
